# BusFleetManager

./: .replit  pyproject.toml  replit.nix
attached_assets/: Pasted--Route-status-enum-export-enum-RouteStatus-ACTIVE-Active-INACTIVE-Inactive-SEASO-1743675677506.txt  Pasted-export-enum-BusStatus-ACTIVE-Active-MAINTENANCE-Maintenance-INACTIVE-Inactive--1743675662181.txt  Pasted-import-z-from-zod-Ticket-status-enum-export-enum-TicketStatus-RESERVED-Reserved--1743675714202.txt
bus_fleet_api/: main.py
bus_fleet_api/accounts/: __init__.py  models.py  serializers.py  urls.py  views.py
bus_fleet_api/api/: urls.py
bus_fleet_api/buses/: __init__.py  models.py  serializers.py  urls.py  views.py
bus_fleet_api/common/: models.py  pagination.py  permissions.py  utils.py
bus_fleet_api/core/: settings.py  urls.py
bus_fleet_api/employees/: __init__.py  models.py  serializers.py  urls.py  views.py
bus_fleet_api/routes/: models.py  serializers.py  urls.py  views.py
bus_fleet_api/tickets/: __init__.py  models.py  serializers.py  urls.py  views.py
bus_fleet_api/trips/: __init__.py  models.py  serializers.py  urls.py  views.py
